--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -18,6 +18,7 @@ redirects:
   diona: ./characters/cryo/diona.md
   eula: ./characters/cryo/eula.md
   ganyu: ./characters/cryo/ganyu.md
+  kaeya: ./characters/cryo/kaeya.md
   qiqi: ./characters/cryo/qiqi.md
   rosaria: ./characters/cryo/rosaria.md
   shenhe: ./characters/cryo/shenhe.md
