added diluc redirect

--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -46,6 +46,7 @@ redirects:
   xingqiu: ./characters/hydro/xingqiu.md
   amber: ./characters/pyro/amber.md
   bennett: ./characters/pyro/bennett.md
+  diluc: ./characters/pyro/diluc.md
   hu-tao: ./characters/pyro/hu-tao.md
   hutao: ./characters/pyro/hu-tao.md
   klee: ./characters/pyro/klee.md
