Link fixes for guides

--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -59,4 +59,5 @@ redirects:
   egt: ./combat-mechanics/elemental-effects/elemental-gauge-theory.md
   srp: ./combat-mechanics/elemental-effects/simultaneous-reaction-priority.md
   common-terms: theorycrafting.md
+  common-terms#attack-string-notion: theorycrafting.md#combat-notation
   
