fixed ayato links

--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -43,6 +43,7 @@ redirects:
   gmc: ./characters/geo/traveler-geo.md
   yunjin: ./characters/geo/yunjin.md
   zhongli: ./characters/geo/zhongli.md
+  ayato: ./characters/hydro/ayato.md
   barbara: ./characters/hydro/barbara.md
   kokomi: ./characters/hydro/kokomi.md
   mona: ./characters/hydro/mona.md
