--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -50,6 +50,7 @@ redirects:
   tartaglia: ./characters/hydro/tartaglia.md
   childe: ./characters/hydro/tartaglia.md
   xingqiu: ./characters/hydro/xingqiu.md
+  yelan: ./characters/hydro/yelan.md
   amber: ./characters/pyro/amber.md
   bennett: ./characters/pyro/bennett.md
   diluc: ./characters/pyro/diluc.md
