Add Kuki Shinobu (#1252)
- Add Kuki Shinobu character page
- Add evidence vault
- Add Shinobu to SUMMARY.md
- Add Shinobu redirects

--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -30,6 +30,9 @@ redirects:
   raiden: ./characters/electro/raiden.md
   razor: ./characters/electro/razor.md
   sara: ./characters/electro/sara.md
+  shinobu: ./characters/electro/shinobu.md
+  kuki: ./characters/electro/shinobu.md
+  kuki-shinobu: ./characters/electro/shinobu.md
   traveler-electro: ./characters/electro/traveler-electro.md
   emc: ./characters/electro/traveler-electro.md
   yae-miko: ./characters/electro/yae-miko.md
