added Heizou page (#1267)

--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -5,6 +5,7 @@ structure:
   summary: SUMMARY.md
 
 redirects:
+  heizou: ./characters/anemo/heizou.md
   jean: ./characters/anemo/jean.md
   kazuha: ./characters/anemo/kazuha.md
   sayu: ./characters/anemo/sayu.md
