--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@docusaurus/preset-classic": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
-    "docusaurus-theme-search-typesense": "^0.8.0-0",
+    "docusaurus-theme-search-typesense": "^0.8.0",
     "hast-util-is-element": "^1.1.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
